fault-injection.yaml
# Injecting faults into the microservices. Eg.,Injecting a 500 response in accessing a particular service.

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservice-a-fault 
spec:
  hosts:
  - microservice-a.default.svc.cluster.local  
  http:
  - fault:
      abort:
        percent: 100
        httpStatus: 500
    route:
    - destination:
        host: microservice-a.default.svc.cluster.local
